[package]
authors = [
	"Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
	"The Embedded Devices Working Group Arm Team <arm@teams.rust-embedded.org>"
]
default-run = "hello"
description = "Examples for MPS3-AN536 device (Arm Cortex-R)"
edition = "2021"
homepage = "https://github.com/rust-embedded/cortex-ar.git"
license = "MIT OR Apache-2.0"
name = "mps3-an536"
publish = false
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-ar.git"
rust-version = "1.83"
version = "0.0.0"

[dependencies]
cortex-ar = { path = "../../cortex-ar", features = ["critical-section-multi-core"] }
cortex-r-rt = { path = "../../cortex-r-rt" }
semihosting = { version = "0.1.18", features = ["stdio"] }
# arm-gic = { version = "0.7.0", optional = true }
arm-gic = { git = "https://review.trustedfirmware.org/arm-firmware-crates/arm-gic", rev = "refs/changes/22/43322/1", optional = true }
critical-section = "1.2.0"
heapless = "0.9.1"

[build-dependencies]
arm-targets = {version = "0.2.0", path = "../../arm-targets"}

[features]
eabi-fpu = ["cortex-r-rt/eabi-fpu"]
gic = ["arm-gic"]

[[bin]]
name = "gic-map"
required-features = ["gic"]

[[bin]]
name = "gic-static-section-irq"
required-features = ["gic"]

[[bin]]
name = "gic-unified-irq"
required-features = ["gic"]
